Completed functionality: Loading of an Incoming SMS to the listview

--- a/app/src/main/res/layout/activity_inbox.xml
+++ b/app/src/main/res/layout/activity_inbox.xml
@@ -26,6 +26,7 @@
     </com.google.android.material.appbar.AppBarLayout>
 
     <ListView
+        android:id="@+id/lv_inbox_sms"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_alignParentTop="false"
