--- a/app/src/main/res/layout/activity_outbox.xml
+++ b/app/src/main/res/layout/activity_outbox.xml
@@ -26,6 +26,7 @@
     </com.google.android.material.appbar.AppBarLayout>
 
     <ListView
+        android:id="@+id/lv_outbox_sms"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_alignParentTop="false"
@@ -42,7 +43,7 @@
         android:layout_marginBottom="10dp"
         android:layout_marginRight="20dp"
         app:icon="@drawable/ic_baseline_chat_24"
-        android:text="Start Chat"
+        android:text="New SMS"
         android:textAllCaps="false"
         android:padding="10dp"
         android:layout_marginEnd="20dp" />
